--- a/Ecommerce/Client-App/src/app/app.component.html
+++ b/Ecommerce/Client-App/src/app/app.component.html
@@ -1,10 +1,11 @@
 ﻿<div class="row">
 	<div class="col-lg-9">
 		<h3>{{ title }}</h3>
+		<product-list></product-list>
 	</div>
 	<div class="col-md-3">
 		<div class="card">
-		<h3>Cart</h3>
+		<h3>Carts</h3>
 		</div>
 	</div>
 </div>
