--- a/Ecommerce/Client-App/src/app/shop/ProductList.component.html
+++ b/Ecommerce/Client-App/src/app/shop/ProductList.component.html
@@ -21,7 +21,7 @@
 		<div><strong>Artist:</strong> {{p.artist}}</div>
 		<div><strong>Title:</strong>{{p.title}}</div>
 		<div><strong>Description:</strong>{{p.artDescription}}</div>
-		<button class="btn btn-success btn-sm pull-right" id="buyButton">Buy</button>
+		<button class="btn btn-success btn-sm pull-right" id="buyButton" (click)="addProduct(p)">Buy</button>
 
 	</div>
 
