--- a/Ecommerce/Client-App/src/app/shop/cart.component.html
+++ b/Ecommerce/Client-App/src/app/shop/cart.component.html
@@ -1,4 +1,24 @@
 ﻿
 <h3>Shopping cart</h3>
 
-<div>Count: {{data.order.items.length}} </div>
+<div>Items: {{data.order.items.length}} </div>
+
+<table class="table table-sm table-hover">
+
+	<thead>
+		<tr>
+			<td>Product</td>
+			<td>#</td>
+			<td>$</td>
+			<td>Total</td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr *ngFor="let o of data.order.items">
+			<td>{{o.productCategory}} - {{o.productTitle }}</td>
+			<td>{{o.quantity}}</td>
+			<td>{{o.unitPrice | currency:"USD":true}}</td>
+			<td>{{(o.unitPrice * o.quantity) | currency:"USD":true}}</td>
+		</tr>
+	</tbody>
+</table>
