--- a/Ecommerce/Client-App/src/app/shop/cart.component.html
+++ b/Ecommerce/Client-App/src/app/shop/cart.component.html
@@ -1,7 +1,8 @@
 ﻿
-<h3>Shopping cart</h3>
-
+<h3>Shopping Cart</h3>
 <div>Items: {{data.order.items.length}} </div>
+<div>Subtotal: {{data.order.subtotal}}</div>
+
 
 <table class="table table-sm table-hover">
 
@@ -10,7 +11,7 @@
 			<td>Product</td>
 			<td>#</td>
 			<td>$</td>
-			<td>Total</td>
+
 		</tr>
 	</thead>
 	<tbody>
