--- a/Ecommerce/Client-App/src/app/app.component.html
+++ b/Ecommerce/Client-App/src/app/app.component.html
@@ -1,11 +1,2 @@
-﻿<div class="row">
-	<div class="col-lg-9">
-		<h3>{{ title }}</h3>
-		<product-list></product-list>
-	</div>
-	<div class="col-md-3">
-		<div class="card">
-		<the-cart></the-cart>
-		</div>
-	</div>
-</div>
+﻿
+<router-outlet></router-outlet>
